<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.junsan.Junsan2fFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_junsan_2f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_junsan_2f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="290dp" />

    <ImageView
        android:id="@+id/junsanimage_2f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/junsan2f_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true" />

    <ImageView
        android:id="@+id/overlay_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_maker"
        app:layout_constraintTop_toTopOf="@id/junsanimage_2f"
        app:layout_constraintStart_toStartOf="@id/junsanimage_2f"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/junsan2f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        android:text="@string/string_junsan2f_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_1"
        app:layout_constraintTop_toTopOf="@+id/junsanimage_2f"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/junsanimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_2"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_3"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_1"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_1"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_4"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_2"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_2"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_5"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_3"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_1"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_6"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_4"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_2"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_7"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_5"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_1"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_8"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_6"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_2"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_9"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_7"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_1"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_10"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_8"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_2"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_11"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_9"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_1"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_12"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_10"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_2"
        android:clickable="true"
        android:focusable="true" />


    <TextView
        android:id="@+id/junsan2f_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_13"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_11"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_1"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/junsan2f_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_junsan2f_14"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/junsan2f_12"
        app:layout_constraintStart_toStartOf="@id/guideline_start_junsan_2f_2"
        android:clickable="true"
        android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
