<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.toegye.Toegye2fFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_toegye_2f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_toegye_2f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="290dp" />

    <ImageView
        android:id="@+id/toegyeimage_2f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/toegyeimage_2f"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/overlay_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_maker"
        app:layout_constraintTop_toTopOf="@id/toegyeimage_2f"
        app:layout_constraintStart_toStartOf="@id/toegyeimage_2f"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/toegye2f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_1"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toegyeimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="569dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/toegye2f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toegyeimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="412dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/toegye2f_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_3"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_1"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/toegye2f_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_4"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_2"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/toegye2f_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_5"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_3"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/toegye2f_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_6"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_4"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_7"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_5"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_8"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_6"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/toegye2f_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_9"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_7"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_10"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_8"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_11"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_9"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_12"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_10"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_13"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_11"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_14"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_12"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/toegye2f_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_toegye2f_15"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toegye2f_13"
        app:layout_constraintStart_toStartOf="@id/guideline_start_toegye_2f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp"
        android:clickable="true"
        android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>